--- a/secnote.texinfo
+++ b/secnote.texinfo
@@ -16,12 +16,12 @@ This manual is for secnote.
 Copyright @copyright{} 2013 Mattias Andrée
 
 @quotation
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.3 or
-any later version published by the Free Software Foundation; with no
-Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
-Texts. A copy of the license is included in the section entitled
-``GNU Free Documentation License''.
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.  This file is offered as-is,
+without any warranty.
+
+(GNU All Permissive License)
 @end quotation
 @end copying
 
